# Mikedown

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  damian.html  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  claude-fix-issues.yml  release.yml  update-homebrew.yml
docs/superpowers/plans/: 2026-03-23-audit-roadmap.md
e2e/: smoke.spec.ts
reports/: 2026-03-29.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: DropZone.tsx  Editor.tsx  MarkdownRenderer.tsx  ProgressBar.tsx  RecentFiles.tsx  SearchBar.tsx  Sidebar.tsx  TabBar.tsx  Toast.tsx  Toc.tsx  Toolbar.tsx
src/lib/: exportOps.ts  fileOps.ts  markdown.ts  tableConverter.ts  urlClickPlugin.ts
src/store/: appStore.ts
src/test/: App.test.tsx  appStore.test.ts  components.test.tsx  exportOps.test.ts  fileOps.test.ts  markdown.test.ts  saveFlow.test.ts  setup.ts  tabs.test.ts
