[package]
name = "mikedown"
version = "0.10.0"
description = "MikeDown — Markdown editor and viewer"
authors = ["Michael Zuo"]
license = "MIT"
edition = "2021"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
